@@ -1,5 +1,10 @@
 2001-10-30  Danny Smith  <dannysmith@users.sourceforge.net>
 
+	* include/io.h (_commit): Add declaration.
+	Thanks to: "stefan" <stefan@lkcc.org>  
+
+2001-10-30  Danny Smith  <dannysmith@users.sourceforge.net>
+
 	* include/sys/stat.h: Make S_IS* macros safer.
 
 2001-10-27  Danny Smith  <dannysmith@users.sourceforge.net>
